src/z80asm/z80asm2/t/30-directive/expected/rept_11.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/rept_11.asm
Assembling t/30-directive/input/rept_11.asm...
t/30-directive/input/rept_11.asm:1:2: error: Expected repeat count after REPT
    #rept ; no expression
     ^
t/30-directive/input/rept_11.asm:2:2: error: Unexpected ENDR directive
    #endr
     ^
t/30-directive/input/rept_11.asm:3:7: error: Expected a value, got "*"
    #rept *3 ; syntax error in expression
          ^
t/30-directive/input/rept_11.asm:4:2: error: Unexpected ENDR directive
    #endr
     ^
t/30-directive/input/rept_11.asm:5:7: error: ASMPC is not allowed in a constant expression
    #rept ASMPC ; not constant expression
          ^
t/30-directive/input/rept_11.asm:6:2: error: Unexpected ENDR directive
    #endr
     ^
t/30-directive/input/rept_11.asm:7:9: error: Unexpected token after REPT count: extra
    #rept 1 extra ; extra tokens after expression
            ^
t/30-directive/input/rept_11.asm:8:2: error: Unexpected ENDR directive
    #endr
     ^
t/30-directive/input/rept_11.asm:9:2: error: Unexpected end of file; missing ENDR for REPT
    #rept 1 ; no endr
     ^
